--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,29 @@
 <resources>
-    <string name="app_name">dark_ui</string>
+<string name="app_name">Mate</string>
+<string name="nom_de_la_coloc">Nom de la coloc</string>
+<string name="gere_ta_coloc">Gère ta coloc de A à Z</string>
+<string name="nom_colocataire">Colocataire 1</string>
+<string name="email_colocataire">Email coloc...</string>
+<string name="ajouter_colocataire">Ajouter</string>
+<string name="suivant_vers_choisir_nom_colocataire">Suivant</string>
+<string name="envoi_mail">Nous avons envoyé un mail de vérification à l adresse suivante :</string>
+<string name="ex_email"><u>jeanmich@gmail.com</u></string>
+<string name="renvoyer">Renvoyer</string>
+<string name="verifie_tes_spams_avant_de_renvoyer">*vérifie tes spams avant de renvoyer</string>
+<string name="revenir_sur_appli_apres_verif">Une fois ton adresse validée reviens sur cette page ou quitte et réouvre l’application</string>
+<string name="rejoindre">Rejoindre</string>
+<string name="identitfiant_de_la_coloc">Identitfiant de la coloc</string>
+<string name="slogan">Gère ta coloc de A à Z</string>
+<string name="ou">ou</string>
+<string name="creer_colocation">Créer une colocation</string>
+<string name="title_activity_identification">identificationActivity</string>
+<string name="qui_es_tu">Qui es-tu ?</string>
+<string name="nom">nom</string>
+<string name="verifier_mon_mail">Vérifier mon mail</string>
+<!-- BOTTOM NAVIGATION VIEW
+<string name="bottom_navigation_menu_rappels">Rappels</string>
+<string name="bottom_navigation_menu_depenses">Dépenses</string>
+<string name="bottom_navigation_menu_liste">Liste</string>
+<string name="bottom_navigation_menu_reglage">Réglages</string> -->
+
 </resources>
